<resources>
    <string name="version_number">3.0</string>
    <string name="app_name">Pivot</string>
    <string name="app_short_name_hw">Pivot (HW)</string>
    <string name="app_short_name_sw">Pivot (SW)</string>
    <string name="sdcard">/sdcard</string>
    <string name="s">%s</string>
    <string name="d">%,d</string>
    <string name="type_byte">Byte</string>
    <string name="type_word">Word</string>
    <string name="type_dword">Dword</string>
    <string name="type_xor">Xor</string>
    <string name="type_float">Float</string>
    <string name="type_qword">Qword</string>
    <string name="type_double">Double</string>
    <string name="type_auto">Auto</string>
    <string name="type_byte_short">B</string>
    <string name="type_word_short">W</string>
    <string name="type_dword_short">D</string>
    <string name="type_xor_short">X</string>
    <string name="type_float_short">F</string>
    <string name="type_qword_short">Q</string>
    <string name="type_double_short">E</string>
    <string name="type_auto_short">A</string>
    <string name="btn_hex">HEX</string>
    <string name="colon">:</string>
    <string name="semicolon">;</string>
    <string name="hex">h</string>
    <string name="rhex">r</string>
    <string name="hex_example">BAAD</string>
    <string name="yes_slow">__yes__ (__slow__)</string>
    <string name="no_slow">__no__ (__slow__)</string>
    <string name="help_front">"__quick_start_title__

__help_basics__

__help_floating_icon__

__help_exact_search__

__help_group_search__

__help_range_search__

__help_encrypted_search__

__help_fuzzy_search__

__help_mask_search__

__help_fill__

__help_text_search__

__help_xor_search__

__help_speedhack__

__help_others__  

__help_typical_usage__

__help_speed_up__

__help_hints_0__

__help_hex_colors__

__rtfm__
"</string>
    <string name="speedhack_speeds_">__speedhack_speeds__:</string>
    <string name="language_">__language__ (Language)</string>
    <string name="improve_translation_en">This translation was created by an automatic translator. You can improve it by using our collective translation service.</string>
    <string name="improve_translation_">"__improve_translation_en__

__improve_translation__"</string>
    <string name="improve_translation_hint">"__improve_translation_en__
http://gameguardian.net/forum/topic/7544-if-you-want-to-add-a-new-translation-or-improve-an-existing-one/"</string>
    <string name="tilde">~</string>
    <string name="not_equal">≠</string>
    <string name="examples_search">"
__help_exact_search_title__:
\u0009-340

__help_xor_search_title__:
\u0009-340__mode_xor__16

__help_range_search_title__: 
\u0009298__tilde__764

__help_xor_search_title__ + __help_range_search_title__: 
\u0009298__tilde__764__mode_xor__32

__help_group_search_title__: 
\u0009895__semicolon__438__semicolon__-83__colon__300
\u0009895D__semicolon__438F__semicolon__-83B__colon__300
\u0009800__tilde__900__semicolon__438__semicolon__-90__tilde__-60__colon__300
\u0009800D__tilde__900D__semicolon__438E__semicolon__-90B__tilde__-60B__colon__300
\u0009800__tilde____tilde__900__semicolon__438__semicolon__-90__tilde__-60__colon__300
\u0009800D__tilde__900D__semicolon__438E__semicolon__-90B__tilde____tilde__-60B__colon__300

__ordered_group_search__: 
\u0009895__semicolon__438__semicolon__-83__colon____colon__300
\u0009895D__semicolon__438F__semicolon__-83B__colon____colon__300
\u0009800__tilde__900__semicolon__438__semicolon__-90__tilde__-60__colon____colon__300
\u0009800D__tilde__900D__semicolon__438E__semicolon__-90B__tilde__-60B__colon____colon__300
\u0009800__tilde__900__semicolon__438__semicolon__-90__tilde____tilde__-60__colon____colon__300
\u0009800D__tilde____tilde__900D__semicolon__438E__semicolon__-90B__tilde__-60B__colon____colon__300
\u0009123__semicolon____any____semicolon__456__colon____colon__9

\u0009\u0009__any__ = __any_value__

__format_hex__: 
\u0009BAFE56DE__hex__

__format_rhex__: 
\u0009DE56FEBA__rhex__
__text_examples__

__rtfm__
"</string>
    <string name="examples_timejump">"
\"42345678\" = 1 __unit_years_short__ 125 __unit_days_short__ 2 __unit_hours_short__ 41 __unit_minutes_short__ 18 __unit_seconds_short__
\"1:125:2:41:18\" = 1 __unit_years_short__ 125 __unit_days_short__ 2 __unit_hours_short__ 41 __unit_minutes_short__ 18 __unit_seconds_short__
\"5:13\" = 5 __unit_minutes_short__ 13 __unit_seconds_short__
\"7:3:1\" = 7 __unit_hours_short__ 3 __unit_minutes_short__ 1 __unit_seconds_short__
\"3600\" = 1 __unit_hours_short__
\"2:15:54:32\" = 2 __unit_days_short__ 15 __unit_hours_short__ 54 __unit_minutes_short__ 32 __unit_seconds_short__
\"3600.15\" = 1 __unit_hours_short__ 0.15 __unit_seconds_short__
\"7:3:1.519\" = 7 __unit_hours_short__ 3 __unit_minutes_short__ 1.519 __unit_seconds_short__

__rtfm__
"</string>
    <string name="speedhack_speeds">__speedhack__: __speeds__</string>
    <string name="speedhack_intercept">__speedhack__: __intercept__</string>
    <string name="speedhack_functions">__speedhack__: __functions__</string>
    <string name="load_0">__load_items__; __load_values__; __load_freeze__;</string>
    <string name="load_1">__load_items__; __load_values__;</string>
    <string name="load_2">__load_items__;</string>
    <string name="empty" />
    <string name="reset_on_exit_">__speedhack__, __unrandomizer__: __reset_on_exit__</string>
    <string name="kill_game_info_">"__kill_game_info__

__continue_ask__"</string>
    <string name="help_faq">"
* __help_faq_title__:

     1. __help_faq_1_q__
        __help_faq_1_a__

     2. __help_faq_2_q__
        __help_faq_2_a__

     3. __help_faq_3_q__
        __help_faq_3_a__

     4. __help_faq_4_q__
        __help_faq_4_a__

     5. __help_faq_5_q__
        __help_faq_5_a__

     6. __help_faq_6_q__
        __help_faq_6_a__

     7. __help_faq_7_q__
        __help_faq_7_a__

     8. __help_faq_8_q__
        __help_faq_8_a__

     9. __help_faq_9_q__
        __help_faq_9_a__

     10. __help_faq_10_q__
        __help_faq_10_a__

     11. __help_faq_11_q__
        __help_faq_11_a__

     12. __help_faq_12_q__
        __help_faq_12_a__

     13. __help_faq_13_q__
        __help_faq_13_a__

     14. __help_faq_14_q__
        __help_faq_14_a__

     15. __help_faq_15_q__
        __help_faq_15_a__

     16. __help_faq_16_q__
        __help_faq_16_a__

     17. __help_faq_17_q__
        __help_faq_17_a__

     18. __help_faq_18_q__
        __help_faq_18_a__

     19. __help_faq_19_q__
        __help_faq_19_a__

     20. __help_faq_20_q__
        __help_faq_20_a__

     21. __help_faq_21_q__
        __help_faq_21_a__

     22. __help_faq_22_q__
        __help_faq_22_a__

     23. __help_faq_23_q__
        __help_faq_23_a__

     24. __help_faq_24_q__
        __help_faq_24_a__

     25. __help_faq_25_q__
        __help_faq_25_a__

     26. __help_faq_26_q__
        __help_faq_26_a__

     27. __help_faq_27_q__
        __help_faq_27_a__

     28. __help_faq_28_q__
        __help_faq_28_a__

     29. __help_faq_29_q__
        __help_faq_29_a__
     
     30. __help_faq_30_q__
        __help_faq_30_a__
        
     31. __help_faq_31_q__
        __help_faq_31_a__

     32. __help_faq_32_q__
        __help_faq_32_b__
        
     33. __help_faq_33_q__
        __help_faq_33_a__
"</string>
    <string name="pkg">__pkg_1____pkg_2__</string>
    <string name="pkg_1">catch_.me_.</string>
    <string name="pkg_2">if_.you_.can_</string>
    <string name="percent">%</string>
    <string name="sdcard_file">/sdcard/1.txt</string>
    <string name="mask_examples">"
__address__ = A20
__mask__ FFFFFFFF

__address__ != B20
__mask__ FF0

__address__ = 0B?0
__mask__ FFF

__address__ != ??F??
__mask__ BA0

__rtfm__
"</string>
    <string name="question">\?</string>
    <string name="mask_example">"
        __address__ 12__question__
        __mask__ FFF

        __address__ 123
        __mask__ FF0

        __address__ 127
        __mask__ FFF0

        __address__ 129
        __mask__ BFF0

        __address__ 0121
        __mask__ 0FF0
"</string>
    <string name="help_hints_0">"__help_hints__
\u0009__help_hint_1__
"</string>
    <string name="forum">http://gameguardian.net/forum</string>
    <string name="mode_xor">X</string>
    <string name="edit_all_examples">"
\u000912345
\u000912BA0h
\u000912BA0r
\u000912;34;56;78;90

__help_xor_search_title__:
\u000912345X4
\u000912345X-4
\u000912BA0hX4
\u000912BA0hX-4
\u000912BA0rX4
\u000912BA0rX-4
\u000912;34;56;78;90X4
\u000912;34;56;78;90X-4
__text_examples__

__rtfm__
"</string>
    <string name="edit_examples">"
\u000912345
\u000912BA0h
\u000912BA0r

__help_xor_search_title__:
\u000912345X4
\u000912345X-4
\u000912BA0hX4
\u000912BA0hX-4
\u000912BA0rX4
\u000912BA0rX-4
__text_examples__

__rtfm__
"</string>
    <string name="diff_examples">"
123
123__tilde__456
123__tilde____tilde__456

__rtfm__
"</string>
    <string name="keyboard_external">__keyboard__ __external__</string>
    <string name="memory_filter_examples">"
123
1?3
1*3
^123
^1?3
^1*3
123$
1?3$
1*3$
^123$
^1?3$
^1*3$
text

__rtfm__
"</string>
    <string name="asterisk">*</string>
    <string name="caret">^</string>
    <string name="dollar">$</string>
    <string name="empty_zygote_memory">__empty_memory__; Zygote</string>
    <string name="restart_game_without_protection">__restart_game__ (__without_protection__)</string>
    <string name="unrandomizer_functions">__unrandomizer__: __functions__</string>
    <string name="type_qword_">__type_qword__:</string>
    <string name="type_double_">__type_double__:</string>
    <string name="unrandomizer_intercept">__unrandomizer__: __intercept__</string>
    <string name="fractional">{x}</string>
    <string name="fractional_hint_">"__fractional_hint__
x = 123__decimal__456; {x} = 0__decimal__456
x = -123__decimal__456; {x} = -0__decimal__456"</string>
    <string name="decimal">.</string>
    <string name="thousands">,</string>
    <string name="i">\"i\"</string>
    <string name="waitpid">waitpid</string>
    <string name="freeze_interval_help_">"__freeze_interval_help__

__small_is_bad__"</string>
    <string name="saved_list_update_interval_help_">"__saved_list_update_interval_help__

__small_is_bad__"</string>
    <string name="logcat">Logcat</string>
    <string name="vspace_list">Parallel Space, VirtualXposed, Parallel Space Lite, GO multiple, 2Face</string>
    <string name="selinux">SeLinux</string>
    <string name="nox">Nox App Player</string>
    <string name="bluestacks">Bluestacks</string>
    <string name="address">Address:</string>
    <string name="filter">Filter</string>
    <string name="type_edit_limit">Input value from __s__ to __s__</string>
    <string name="help">Help</string>
    <string name="more">More</string>
    <string name="milliseconds_short">ms</string>
    <string name="only_memory">Only within the memory range:</string>
    <string name="path">Path:</string>
    <string name="file">File:</string>
    <string name="from_range">From:</string>
    <string name="to_range">To:</string>
    <string name="download_scripts">Download Scripts</string>
    <string name="default_">Default:</string>
    <string name="help_extract">Open SAF</string>
    <string name="as_text">As text (can not be loaded)</string>
    <string name="typical_values">Typical values</string>
    <string name="starts">Starts with</string>
    <string name="ends">Ends with</string>
    <string name="debug_load">Dump all code loads</string>
    <string name="debug_log">Log most script calls</string>
    <string name="prot_read">May be read</string>
    <string name="prot_write">May be written</string>
    <string name="prot_exec">May be executed</string>
    <string name="debug_disassemble">Disassemble</string>
    <string name="skip_system_libs">Skip system libraries</string>
</resources>