<?xml version="1.0" encoding="utf-8"?>
<android.fix.ScrollView
    android:paddingLeft="6.0dip"
    android:paddingRight="6.0dip"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <android.fix.LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <android.fix.TextView
            android:textAppearance="@style/MediumText"
            android:layout_gravity="center_vertical"
            android:id="@id/message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Example of message text" />
        <android.fix.LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <android.fix.TextView
                android:textAppearance="@style/MediumText"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/file" />
            <android.ext.EditTextPath
                android:layout_gravity="center_vertical"
                android:id="@id/file"
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:hint="@string/sdcard_file"
                android:maxLength="120"
                android:layout_weight="1.0"
                android:inputType="text"
                android:imeOptions="actionDone" />
            <android.ext.PathSelector
                android:textSize="@dimen/button_text_size"
                android:layout_gravity="center"
                android:id="@id/file_selector"
                android:layout_width="48.0dip"
                android:layout_height="48.0dip" />
        </android.fix.LinearLayout>
        <android.fix.WrapLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <android.fix.ImageButtonView
                android:layout_gravity="center_vertical"
                android:id="@id/examples"
                android:padding="12.0dip"
                android:layout_width="48.0dip"
                android:layout_height="48.0dip"
                android:src="@drawable/ic_help_circle_outline_white_24dp" />
            <android.fix.Button
                android:textAppearance="@style/SmallText"
                android:layout_gravity="center_vertical"
                android:id="@id/download_scripts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="48.0dip"
                android:text="@string/download_scripts" />
            <android.fix.Button
                android:textAppearance="@style/MediumText"
                android:layout_gravity="center_vertical"
                android:id="@id/help"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="48.0dip"
                android:text="@string/help" />
            <android.fix.Button
                android:textAppearance="@style/MediumText"
                android:layout_gravity="center_vertical"
                android:id="@id/help_extract"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="48.0dip"
                android:text="@string/help_extract" />
        </android.fix.WrapLayout>
        <android.fix.LinearLayout
            android:orientation="vertical"
            android:id="@id/debug"
            android:visibility="gone"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <android.fix.CheckBox
                android:textAppearance="@style/SmallText"
                android:id="@id/disassemble"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/debug_disassemble" />
            <android.fix.CheckBox
                android:textAppearance="@style/SmallText"
                android:id="@id/load"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/debug_load" />
            <android.fix.CheckBox
                android:textAppearance="@style/SmallText"
                android:id="@id/log"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/debug_log" />
            <android.fix.TextView
                android:textAppearance="@style/SmallText"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/path" />
            <android.fix.LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
                <android.ext.EditTextPath
                    android:layout_gravity="center_vertical"
                    android:id="@id/path"
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:hint="@string/sdcard"
                    android:maxLength="120"
                    android:layout_weight="1.0"
                    android:inputType="text"
                    android:imeOptions="actionDone" />
                <android.ext.PathSelector
                    android:textSize="@dimen/button_text_size"
                    android:layout_gravity="center"
                    android:id="@id/path_selector"
                    android:layout_width="48.0dip"
                    android:layout_height="48.0dip" />
            </android.fix.LinearLayout>
        </android.fix.LinearLayout>
        <android.fix.Button
            android:textSize="@dimen/button_text_size"
            android:id="@id/ext_btn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/more"
            android:layout_weight="1.0" />
    </android.fix.LinearLayout>
</android.fix.ScrollView>