<?xml version="1.0" encoding="utf-8"?>
<android.fix.ScrollView
    android:paddingLeft="6.0dip"
    android:paddingRight="6.0dip"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <android.fix.LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <android.fix.TextView
            android:textAppearance="@style/MediumText"
            android:layout_gravity="center_vertical"
            android:id="@id/message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Example of message text" />
        <android.fix.LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <android.fix.TextView
                android:textAppearance="@style/MediumText"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/file" />
            <android.ext.EditTextPath
                android:layout_gravity="center_vertical"
                android:id="@id/file"
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:hint="@string/sdcard_file"
                android:maxLength="120"
                android:layout_weight="1.0"
                android:inputType="text"
                android:imeOptions="actionDone" />
            <android.ext.PathSelector
                android:textSize="@dimen/button_text_size"
                android:layout_gravity="center"
                android:id="@id/path_selector"
                android:layout_width="48.0dip"
                android:layout_height="48.0dip" />
        </android.fix.LinearLayout>
        <android.fix.LinearLayout
            android:orientation="vertical"
            android:id="@id/save_stuff"
            android:visibility="gone"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <android.fix.CheckBox
                android:textAppearance="@style/SmallText"
                android:id="@id/as_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/as_text" />
        </android.fix.LinearLayout>
        <android.fix.LinearLayout
            android:orientation="vertical"
            android:id="@id/load_stuff"
            android:visibility="gone"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <android.fix.RadioGroup
                android:orientation="vertical"
                android:id="@id/mode"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
                <android.fix.RadioButton
                    android:textSize="@dimen/button_text_size"
                    android:id="@id/mode_0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/load_0" />
                <android.fix.RadioButton
                    android:textSize="@dimen/button_text_size"
                    android:id="@id/mode_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/load_1" />
                <android.fix.RadioButton
                    android:textSize="@dimen/button_text_size"
                    android:id="@id/mode_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/load_2" />
            </android.fix.RadioGroup>
        </android.fix.LinearLayout>
    </android.fix.LinearLayout>
</android.fix.ScrollView>