<?xml version="1.0" encoding="utf-8"?>
<android.fix.ScrollView
    android:paddingLeft="6.0dip"
    android:paddingRight="6.0dip"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <android.fix.LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <android.fix.TextView
            android:textAppearance="@style/MediumText"
            android:layout_gravity="center_vertical"
            android:id="@id/message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Example of message text" />
        <android.fix.TextView
            android:textAppearance="@style/SmallText"
            android:gravity="center_vertical"
            android:layout_gravity="center_vertical"
            android:id="@id/hint"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/type_edit_limit" />
        <android.fix.LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <android.ext.EditText
                android:layout_gravity="center_vertical"
                android:id="@id/number"
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:imeOptions="actionDone" />
            <android.ext.HexConverter
                android:layout_gravity="center_vertical"
                android:id="@id/number_converter"
                android:layout_width="48.0dip"
                android:layout_height="48.0dip" />
            <android.fix.TextView
                android:textAppearance="@style/MediumText"
                android:layout_gravity="center_vertical"
                android:id="@id/unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/milliseconds_short" />
        </android.fix.LinearLayout>
        <android.fix.TextButtonView
            android:textAppearance="@style/SmallText"
            android:gravity="center_vertical"
            android:layout_gravity="center_vertical"
            android:id="@id/default_"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/default_" />
    </android.fix.LinearLayout>
</android.fix.ScrollView>